--- a/cadastro.html
+++ b/cadastro.html
@@ -19,13 +19,12 @@
     <h1>CADASTRE - SE</h1>
     <p class="subtitle">Crie uma conta para ficar por dentro das últimas tendências.</p>
 
-    <form>
+    <form id="cadastroForm">
       <label for="nome">NOME</label>
       <input type="text" id="nome" name="nome" required>
 
       <label for="telefone">TELEFONE</label>
-      <input type="number" id="telefone" name="telefone" required>
-
+      <input type="text" id="telefone" name="telefone" required>
       <label for="email">EMAIL</label>
       <input type="email" id="email" name="email" required>
 
@@ -42,5 +41,31 @@
 
     <p class="signin">Já tem uma conta? <a href="login.html">ENTRAR</a></p>
   </div>
+
+<script>
+document.getElementById('cadastroForm').addEventListener('submit', async function(e) {
+  e.preventDefault();
+
+  const nome = document.getElementById('nome').value;
+  const telefone = document.getElementById('telefone').value;
+  const email = document.getElementById('email').value;
+  const senha = document.getElementById('password').value;
+
+  const response = await fetch('http://localhost:3000/cadastro', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ nome, telefone, email, senha })
+  });
+
+  if (response.ok) {
+    alert('Cadastro realizado com sucesso!');
+    window.location.href = 'genero.html';  
+  } else {
+    const error = await response.text();
+    alert('Erro ao cadastrar: ' + error);
+  }
+});
+</script>
+
 </body>
 </html>
