--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <h1>LOGIN</h1>
     <p class="subtitle">Acesse sua conta e acompanhe as últimas tendências.</p>
 
-    <form>
+    <form id="loginForm">
       <label for="email">EMAIL</label>
       <input type="email" id="email" name="email" required>
 
@@ -36,5 +36,31 @@
 
     <p class="signin">Ainda não tem uma conta? <a href="cadastro.html">CADASTRE - SE</a></p>
   </div>
+
+<script>
+document.getElementById('loginForm').addEventListener('submit', async function(e) {
+  e.preventDefault();
+
+  const email = document.getElementById('email').value;
+  const senha = document.getElementById('password').value;
+
+  const response = await fetch('http://localhost:3000/login', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email, senha })
+  });
+
+  if (response.ok) {
+    const data = await response.json();
+    localStorage.setItem('token', data.token); // Salva o token JWT
+    alert('Login realizado com sucesso!');
+    window.location.href = 'genero.html'; // Redireciona após login
+  } else {
+    const error = await response.text();
+    alert('Erro ao fazer login: ' + error);
+  }
+});
+</script>
+
 </body>
 </html>
