--- a/cadastro.html
+++ b/cadastro.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cadastro </title>
+  <title>Cadastro</title>
   <link rel="stylesheet" href="stylecadastro.css" />
 </head>
 <body>
-    <header class="main-header">
-  <div class="logo">ALL WEAR</div>
-  <nav class="nav-links">
-    <a href="index.html">Início</a>
-    <a href="genero.html">Escolha</a>
-  </nav>
-</header>
+  <header class="main-header">
+    <div class="logo">ALL WEAR</div>
+    <nav class="nav-links">
+      <a href="index.html">Início</a>
+      <a href="genero.html">Escolha</a>
+    </nav>
+  </header>
 
   <div class="form-container">
     <h1>CADASTRE - SE</h1>
@@ -25,6 +25,7 @@
 
       <label for="telefone">TELEFONE</label>
       <input type="text" id="telefone" name="telefone" required>
+
       <label for="email">EMAIL</label>
       <input type="email" id="email" name="email" required>
 
@@ -42,30 +43,35 @@
     <p class="signin">Já tem uma conta? <a href="login.html">ENTRAR</a></p>
   </div>
 
-<script>
-document.getElementById('cadastroForm').addEventListener('submit', async function(e) {
-  e.preventDefault();
+  <script>
+    document.getElementById('cadastroForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
 
-  const nome = document.getElementById('nome').value;
-  const telefone = document.getElementById('telefone').value;
-  const email = document.getElementById('email').value;
-  const senha = document.getElementById('password').value;
+      const nome = document.getElementById('nome').value;
+      const telefone = document.getElementById('telefone').value;
+      const email = document.getElementById('email').value;
+      const senha = document.getElementById('password').value;
 
-  const response = await fetch('http://localhost:3000/cadastro', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ nome, telefone, email, senha })
-  });
+      try {
+        const response = await fetch('http://localhost:3000/cadastro', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ nome, telefone, email, senha })
+        });
 
-  if (response.ok) {
-    alert('Cadastro realizado com sucesso!');
-    window.location.href = 'genero.html';  
-  } else {
-    const error = await response.text();
-    alert('Erro ao cadastrar: ' + error);
-  }
-});
-</script>
+        const data = await response.json();
 
+        if (response.ok) {
+          alert(data.message);
+          window.location.href = 'genero.html';  
+        } else {
+          alert('Erro ao cadastrar: ' + data.error);
+        }
+      } catch (err) {
+        alert('Erro de conexão com o servidor.');
+        console.error(err);
+      }
+    });
+  </script>
 </body>
 </html>
