--- a/acessoriom.html
+++ b/acessoriom.html
@@ -28,7 +28,7 @@
       <div class="card">
         <h2>Accessories</h2>
         <img src="acessm.jpg" alt="Sunglasses">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing el. Au tem nec lulp semple a pharetra ut velit sollo.</p>
+        <p>Lorem ipsum dolor sit amet, adipiscing el. Au tem nec lulp semple a pharetra ut velit sollo.</p>
       </div>
       <div class="card">
         <h2>Inspiration</h2>
