--- a/WEB/cadastro/cadastro.html
+++ b/WEB/cadastro/cadastro.html
@@ -19,59 +19,30 @@
     <h1>CADASTRE - SE</h1>
     <p class="subtitle">Crie uma conta para ficar por dentro das últimas tendências.</p>
 
-    <form id="cadastroForm">
+    <form id="cadastro">
       <label for="nome">NOME</label>
-      <input type="text" id="nome" name="nome" required>
+  <input type="text" id="nome" name="nome" required autocomplete="name">
 
       <label for="telefone">TELEFONE</label>
-      <input type="text" id="telefone" name="telefone" required>
+  <input type="text" id="telefone" name="telefone" required autocomplete="tel">
 
       <label for="email">EMAIL</label>
-      <input type="email" id="email" name="email" required>
+  <input type="email" id="email" name="email" required autocomplete="email">
 
-      <label for="password">SENHA</label>
-      <input type="password" id="password" name="password" required>
+      <label for="senha">SENHA</label>
+  <input type="password" id="senha" name="senha" required autocomplete="new-password">
 
+<!-- 
       <div class="checkbox-container">
         <input type="checkbox" id="terms" required>
         <label for="terms">Eu concordo com os termos de serviço.</label>
-      </div>
+      </div> -->
 
       <button type="submit">CADASTRAR</button>
     </form>
 
     <p class="signin">Já tem uma conta? <a href="login.html">ENTRAR</a></p>
   </div>
-
-  <script>
-    document.getElementById('cadastroForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
-
-      const nome = document.getElementById('nome').value;
-      const telefone = document.getElementById('telefone').value;
-      const email = document.getElementById('email').value;
-      const senha = document.getElementById('password').value;
-
-      try {
-        const response = await fetch('http://localhost:3000/cadastro', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ nome, telefone, email, senha })
-        });
-
-        const data = await response.json();
-
-        if (response.ok) {
-          alert(data.message);
-          window.location.href = 'genero.html';  
-        } else {
-          alert('Erro ao cadastrar: ' + data.error);
-        }
-      } catch (err) {
-        alert('Erro de conexão com o servidor.');
-        console.error(err);
-      }
-    });
-  </script>
 </body>
+<script src="cadastro.js"></script>
 </html>
