--- a/WEB/cadastro/index.html
+++ b/WEB/cadastro/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro</title>
-  <link rel="stylesheet" href="stylecadastro.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="main-header">
@@ -19,30 +19,25 @@
     <h1>CADASTRE - SE</h1>
     <p class="subtitle">Crie uma conta para ficar por dentro das últimas tendências.</p>
 
-    <form id="cadastro">
+    <form id="cadastroForm">
       <label for="nome">NOME</label>
-  <input type="text" id="nome" name="nome" required autocomplete="name">
+      <input type="text" id="nome" name="nome" required>
 
       <label for="telefone">TELEFONE</label>
-  <input type="text" id="telefone" name="telefone" required autocomplete="tel">
+      <input type="text" id="telefone" name="telefone" required>
 
       <label for="email">EMAIL</label>
-  <input type="email" id="email" name="email" required autocomplete="email">
+      <input type="email" id="email" name="email" required>
 
-      <label for="senha">SENHA</label>
-  <input type="password" id="senha" name="senha" required autocomplete="new-password">
-
-<!-- 
-      <div class="checkbox-container">
-        <input type="checkbox" id="terms" required>
-        <label for="terms">Eu concordo com os termos de serviço.</label>
-      </div> -->
+      <label for="password">SENHA</label>
+      <input type="password" id="senha" name="password" required>
 
       <button type="submit">CADASTRAR</button>
     </form>
+    <p id="mensagem"></p>
 
     <p class="signin">Já tem uma conta? <a href="login.html">ENTRAR</a></p>
   </div>
+  <script src="script.js"></script>
 </body>
-<script src="cadastro.js"></script>
 </html>
